--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.23",
+    "@huggingface/inference": "^4.5.1",
     "@icons-pack/react-simple-icons": "^9.4.1",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "ai": "^4.3.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
@@ -26,7 +29,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.12",
