--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
+    "integration": "dotenv -e .env.integration.local -- next dev",
     "build": "next build",
     "build:cf": "pnpm test && pnpm next-on-pages",
     "start": "next start",
@@ -37,6 +38,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "dotenv-cli": "^10.0.0",
     "@cloudflare/next-on-pages": "^1.13.12",
     "@tailwindcss/postcss": "^4.1.3",
     "@testing-library/jest-dom": "^6.6.3",
