ci: add comprehensive CI/CD pipeline with security, quality and performance checks

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build:cf": "pnpm test && pnpm next-on-pages",
     "start": "next start",
     "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "test": "jest",
     "test:cov": "jest --coverage"
   },
