--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,5 @@
     "target": "ES2017"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": [
-    "node_modules",
-    "jest.setup.ts",
-    "jest.globals-setup.js"
-  ]
+  "exclude": ["node_modules", "jest.setup.ts", "jest.globals-setup.js"]
 }
