--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.23",
     "@huggingface/inference": "^4.5.1",
     "@icons-pack/react-simple-icons": "^9.4.1",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
-    "ai": "^4.3.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
@@ -35,9 +33,7 @@
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5",
-    "zod": "^4.0.5"
+    "tailwind-merge": "^3.1.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.12",
