--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -51,13 +51,14 @@ jobs:
 
       - name: Run npm audit
         run: pnpm audit --audit-level moderate
+        continue-on-error: true
 
       - name: Install OSV Scanner
         run: |
           curl -Lo osv-scanner https://github.com/google/osv-scanner/releases/latest/download/osv-scanner_linux_amd64
           chmod +x osv-scanner
           sudo mv osv-scanner /usr/local/bin/
-          
+
       - name: Run OSV Scanner
         run: osv-scanner -r --skip-git .
         continue-on-error: true
