--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,12 @@
 version: 2
 updates:
-  # Enable version updates for npm dependencies
+  # Enable version updates for npm dependencies with auto-merge
   - package-ecosystem: 'npm'
     directory: '/'
     schedule:
-      interval: 'weekly'
-      day: 'monday'
+      interval: 'daily'
       time: '09:00'
-    open-pull-requests-limit: 10
+    open-pull-requests-limit: 5
     reviewers:
       - 'michaelfried-dev'
     assignees:
@@ -18,15 +17,16 @@ updates:
     labels:
       - 'dependencies'
       - 'automated'
+      - 'auto-merge'
 
-  # Enable security updates for GitHub Actions
+  # Enable version updates for GitHub Actions
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
       interval: 'weekly'
       day: 'monday'
       time: '09:00'
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 3
     reviewers:
       - 'michaelfried-dev'
     assignees:
@@ -37,4 +37,4 @@ updates:
     labels:
       - 'github-actions'
       - 'automated'
-      - 'security'
+      - 'auto-merge'
