--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -41,6 +41,20 @@ jobs:
       - name: Run linting
         run: pnpm run lint
 
+      - name: Format code with Prettier
+        run: pnpm run format
+
+      - name: Commit formatting changes
+        if: success()
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add -A
+          git diff --staged --quiet || git commit -m "style: auto-format code with Prettier [skip ci]"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build application
         run: pnpm run build
         env:
