--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -65,6 +65,9 @@ jobs:
     name: Container Security Scan
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
       - name: Checkout code
